--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cs175.babysactivities">
+    <uses-feature
+        android:name="android.hardware.sensor.barometer"
+        android:required="false"></uses-feature>
 
     <application
         android:allowBackup="true"
