--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,21 @@
         android:required="false" />
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.example.permission.MAPS_RECEIVE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+
+    <uses-feature android:name="android.hardware.location.gps" />
+
+    <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyCKRFM9zbRH9kd4jyWDiMEVydvclYmukAw" />
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -16,8 +29,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme"
-        >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".RegisterActivity"
             android:label="@string/app_name"
@@ -30,15 +42,18 @@
         </activity>
         <activity
             android:name=".BabyActivities"
-            android:label="@string/title_activity_baby_activities" />
+            android:label="@string/title_activity_baby_activities"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".FeedingActivity"
             android:label="@string/title_activity_feeding"
-            android:parentActivityName=".BabyActivities" />
+            android:parentActivityName=".BabyActivities"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".DiaperActivity"
             android:label="@string/title_activity_diaper"
-            android:parentActivityName=".BabyActivities">
+            android:parentActivityName=".BabyActivities"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="cs175.babysactivities.BabyActivities" />
@@ -46,7 +61,8 @@
         <activity
             android:name=".SleepActivity"
             android:label="@string/title_activity_sleep"
-            android:parentActivityName=".BabyActivities">
+            android:parentActivityName=".BabyActivities"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="cs175.babysactivities.BabyActivities" />
@@ -54,7 +70,8 @@
         <activity
             android:name=".WalkActivity"
             android:label="@string/title_activity_walk"
-            android:parentActivityName=".BabyActivities">
+            android:parentActivityName=".BabyActivities"
+            android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="cs175.babysactivities.BabyActivities" />
@@ -64,7 +81,9 @@
             android:name=".MyService"
             android:enabled="true"
             android:exported="true"
-            android:process=":anotherProc"></service>
+            android:process=":anotherProc" />
+
+        <activity android:name=".CompassActivity"></activity>
     </application>
 
 </manifest>
