implement gesture to delete item in diaper activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,7 +83,9 @@
             android:exported="true"
             android:process=":anotherProc" />
 
-        <activity android:name=".CompassActivity"></activity>
+        <activity android:name=".CompassActivity"
+            android:label="Compass"
+            android:parentActivityName=".WalkActivity"></activity>
     </application>
 
 </manifest>
