--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,6 +19,9 @@ android {
     }
     buildToolsVersion '26.0.2'
 }
+repositories{
+    mavenCentral()
+}
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
@@ -30,4 +33,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     compile 'joda-time:joda-time:2.3'
+    implementation 'com.facebook.android:facebook-android-sdk:4.27.0'
+
 }
